maze.lessons.maze.island.IslandMaze.scala.error
Escaper:38: error: not found: value random3
			i = random3()
                            ^