maze.lessons.maze.island.IslandMaze.scala.code
override def run() {

	while (getY() != 0)
	{
		if (!estFaceMur)
		{
			avance;
		}
		else gauche;
	}


	
	while (!estSurBiscuit)
	{
		keepHandOnSideWall;
	
	}
	
	prendBiscuit

}

def keepHandOnSideWall()
{
	var i = 0
	gauche;
	if (estFaceMur)
	{
		droite;
		if (!estFaceMur)
		{
			avance;
		}
		else 
		{
			i = random3()

			if (i == 0) 
			{
				droite;
			}
			else gauche
		}
		
	}
	else 
	{
		
			avance; 
			
	}
	
	

	
}
